plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.3'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.alephlabs'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa';
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf';
	runtimeOnly 'com.mysql:mysql-connector-j'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.apache.commons:commons-text:1.10.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	minHeapSize = "128m" // initial heap size
	maxHeapSize = "1024m" // maximum heap size
//	jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
}
